<resources>
    <string name="app_name">ENCARGALO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Encargalo</string>
    <string name="nav_header_subtitle">Tendero</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_mitienda">MI TIENDA</string>
    <string name="menu_misproductos">MIS PRODUCTOS</string>
    <string name="menu_misordenes">MIS ORDENES</string>
    <string name="mio_menu_detallepedido">DETALLE DEL PEDIDO</string>
    <string name="mio_menu_detalleproducto">DETALLE DEL PRODUCTO</string>
    <string name="mio_menu_conversacion">CONVERSACION</string>
    <string name="menu_mipublicidad">MI PUBLICIDAD</string>
    <string name="menu_miaprendizaje">MI APRENDIZAJE</string>
    <string name="menu_soporte">SOPORTE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_varstriniciariesionprincipal1">ENVÍA TUS PRODUCTOS A MÁS PERSONAS</string>
    <string name="is_varstriniciariesionprincipal2">Continuar con Facebook</string>
    <string name="is_varstriniciariesionprincipal3">Continuar con Google</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="account_deactivate">Your Account is deactivate by admin</string>
    <string name="completed_register">we\'re almost done, we just need you to upload your profile picture</string>
    <string name="facebook_app_id">699800968203023</string>
    <string name="fb_login_protocol_scheme">fb699800968203023</string>
    <string name="facebook_client_token">633397d72b6dd1d89334576c232287b3</string>
    <string name="is_varstrcrearunacuenta1">Nombre</string>
    <string name="is_varstrcrearunacuenta2">Apellido</string>
    <string name="is_varstrcrearunacuenta3">Correo</string>
    <string name="is_varstrcrearunacuenta4">Tipo de Persona</string>
    <string name="is_varstrcrearunacuenta5">Número de Documento</string>
    <string name="is_varstrcrearunacuenta6">Acepto los términos y condiciones y políticas de Privacidad</string>
    <string name="is_varstrcrearunacuenta7">Registrarse</string>
    <string name="is_varstrcrearunacuenta9">Acepto términos y condiciones y políticas de Privacidad</string>
    <string-array name="is_qpkitemspinnercodpais">
        <item>+1</item>
        <item>+52</item>
        <item>+51</item>
        <item>+54</item>
        <item>+55</item>
        <item>+56</item>
        <item>+57</item>
        <item>+58</item>
        <item>+501</item>
        <item>+502</item>
        <item>+503</item>
        <item>+504</item>
        <item>+505</item>
        <item>+506</item>
        <item>+507</item>
        <item>+591</item>
        <item>+591</item>
        <item>+592</item>
        <item>+595</item>
        <item>+597</item>
        <item>+598</item>
    </string-array>
    <string name="is_varstrverificacioncodigo1">Ingrese el código de verificación</string>
    <string name="is_varstrverificacioncodigo2">Se le ha enviado un código de verificación a tu cuenta de correo</string>
    <string name="is_varstrverificacioncodigo3">Verificar Cuenta</string>
    <string name="is_varstrverificacioncodigo4">Reenviar Código</string>
    <string name="is_varstrverificacioncodigo5">Continuar</string>
    <string name="mio_varstrmisordenesprincipal1">Buscar id de orden</string>
    <string name="mio_varstrmisordenesprincipal2">Filtrar por estado</string>
    <string name="mio_varstrmisordenesprincipal9">Filtrar por fecha</string>
    <string name="mio_varstrmisordenesprincipal3">ID ORDEN:</string>
    <string name="mio_varstrmisordenesprincipal4">Cliente:</string>
    <string name="mio_varstrmisordenesprincipal5">Órden creada el:</string>
    <string name="mio_varstrmisordenesprincipal6">Estado de orden</string>
    <string name="mio_varstrmisordenesprincipal7">Detalle</string>
    <string name="mio_varstrmisordenesprincipal8">Chat</string>
    <string-array name="Filtro_ordenestado">
        <item>ESTADO</item>
        <item>SOLICITADO</item>
        <item>ACEPTADO</item>
        <item>RECHAZADO</item>
        <item>EN PREPARACION</item>
        <item>PREPARADO</item>
        <item>EN CAMINO</item>
        <item>ENTREGADO</item>
        <item>RECLAMADO</item>
    </string-array>
    <string-array name="Filtro_ordenfecha">
        <item> Más recientes</item>
        <item> Más antiguos</item>
    </string-array>
    <string name="mio_varstrdetallepedido1">Detalle de pedido</string>
    <string name="mio_varstrdetallepedido2">Detalle de pedido N°: </string>
    <string name="mio_varstrdetallepedido3">00000000</string>
    <string name="mio_varstrdetallepedido4">Nombre del cliente: </string>
    <string name="mio_varstrdetallepedido5">Seleccione repartidor: </string>
    <string name="mio_varstrdetallepedido6">Chat</string>
    <string name="mio_varstrdetallepedido7">Estado del Pedido</string>
    <string name="mio_varstrdetallepedido8">Solicitada</string>
    <string name="mio_varstrdetallepedido9">Acepta/Rechazado</string>
    <string name="mio_varstrdetallepedido10">En Preparación</string>
    <string name="mio_varstrdetallepedido11">En Camino</string>
    <string name="mio_varstrdetallepedido12">Entregado</string>
    <string name="mio_varstrdetallepedido13">Reclamado</string>
    <string name="mio_varstrdetallepedido14">Dirección de entrega</string>
    <string name="mio_varstrdetallepedido15">dirección</string>
    <string name="mio_varstrdetallepedido16">Productos</string>
    <string name="mio_varstrdetallepedido17">Preparado</string>
    <string-array name="repartidores">
        <item>SELECCIONE</item>

    </string-array>
    <string name="mio_varstrdetalleproducto1">Detalle pedidos N:</string>
    <string name="mio_varstrdetalleproducto2">Productos:</string>
    <string name="mio_varstrdetalleproducto3">Agua mineral San Carlos 500ml</string>
    <string name="mio_varstrdetalleproducto4">s/1.5 x un</string>
    <string name="mio_varstrdetalleproducto5">1 un s/1.5</string>
    <string name="mio_varstrdetalleproducto6">Cancelar Orden</string>
    <string name="mio_varstrdetalleproducto7">Enviar</string>
    <string name="mio_varstrdetalleproducto8">Total</string>
    <string name="mio_varstrchatcliente1">CONVERSACIÓN</string>
    <string name="mio_varstrchatcliente2">Cliente</string>
    <string name="mio_varstrchatcliente4">repartidor</string>
    <string name="mio_varstrchatcliente7">Escribir aqui</string>
    <string name="mio_varstrchatcliente8">Tendero</string>
    <string name="mio_varstractualizarrepartidor1">¿Seguro que desea elegir a este repartidor?</string>
    <string name="mio_varstractualizarrepartidor2">Aceptar</string>
    <string name="mio_varstractualizarrepartidor3">Cancelar</string>
    <string name="mio_varstrmensajeconformacion1">El envío de los productos se hizo correctamente</string>
    <string name="mio_varstrmensajeconformacion2">Eso fué rápido</string>
    <string name="mio_varstrmensajeconformacion3">Volver inicio</string>
    <string name="mio_varstrcancelarorden1">¿Seguro que desea cancelar la orden?</string>
    <string name="mio_varstrcancelarorden2">Aceptar</string>
    <string name="mio_varstrcancelarorden3">Cancelar</string>
    <string name="mio_varstrenviarorden1">¿Seguro que desea enviar los productos al cliente?</string>
    <string name="mio_varstrenviarorden2">Aceptar</string>
    <string name="mio_varstrenviarorden3">Cancelar</string>
    <string name="is_varstrterminosycondiciones1">Términos y condiciones de uso</string>
    <string name="is_varstrterminosycondiciones2">""</string>
    <string name="is_varstrterminosycondiciones3">Política de privacidad</string>
    <string name="is_varstrterminosycondiciones4">""</string>
    <string name="is_varstrterminosycondiciones5">Cancelar</string>
    <string name="mio_varstrbrindarubicacion1">¿Desea activar su ubicación?</string>
    <string name="mio_varstrbrindarubicacion2">Si</string>
    <string name="mio_varstrbrindarubicacion3">No</string>
    <string name="str_al_continuar">Al continuar, usted acepta los </string>
    <string name="str_terminos">Términos y condiciones,</string>
    <string name="str_politica">Política de Privacidad</string>
    <string name="str_btn_continuar">Continuar</string>
    <string name="str_btn_cancelar">Cancelar</string>
    <string name="str_home">Eso fue rápido!</string>
    <string name="str_btn_volver_inicio">Volver a inicio</string>
    <string name="str_btn_volver">Volver</string>
    <string name="str_y">y</string>
    <string name="pub_varstrdialogcamara1">Medio</string>
    <string name="pub_varstrdialogcamara2">¿Como desea subir la imagen?</string>
    <string name="pub_varstrdialogcamara3">Tamaño mínimo recomendado de la imagen debe ser de 620px x 310px</string>
    <string name="pub_varstrdialogcamara4">Camara</string>
    <string name="pub_varstrdialogcamara5">Galería</string>
    <string name="pub_varstrmenupublicidad0">Publicidad</string>
    <string name="pub_varstrmenupublicidad1">Crea un anuncio y llega  más personas</string>
    <string name="pub_varstrmenupublicidad2">Crear anuncio</string>
    <string name="pub_varstrmenupublicidad3">Mis anuncios</string>
    <string name="pub_varstrcrearanuncio0">Crear anuncio</string>
    <string name="pub_varstrcrearanuncio1">Imagen</string>
    <string name="pub_varstrcrearanuncio2">Seleccionar imagen</string>
    <string name="pub_varstrcrearanuncio3">Título del anuncio</string>
    <string name="pub_varstrcrearanuncio4">Texto del anuncio</string>
    <string name="pub_varstrcrearanuncio5">Link de redireccionamiento</string>
    <string name="menu_soporte_item_1">Centro de Ayuda</string>
    <string name="menu_soporte_item_2">Notificaciones</string>
    <string name="menu_soporte_item_3">Terminos y Condiciones</string>
    <string name="menu_soporte_item_4">Compartir Encargalo</string>
    <string name="menu_soporte_item_5">Acerca de</string>
    <string name="menu_soporte_item_6">Cerrar sesion</string>
    <string name="menu_soporte_item_7">Còdigo de Tienda</string>
    <string name="menu_soporte_notificaciones_switch_1">Mensajes</string>
    <string name="menu_soporte_notificaciones_switch_2">Actividad de cuenta</string>
    <string name="menu_soporte_notificaciones_switch_3">Nueva orden</string>
    <string name="menu_soporte_notificaciones_switch_4">Segumiento de ordenes</string>
    <string name="menu_soporte_notificaciones_switch_5">Orden completada</string>
    <string name="menu_soporte_acerca_de_btn_1">Website</string>
    <string name="menu_soporte_acerca_de_btn_2">Facebook</string>
    <string name="menu_soporte_acerca_de_btn_3">Instagram</string>
    <string name="menu_soporte_acerca_de_btn_4">Desarrolladores</string>
    <string name="rt_varstrcrearpuntoventa1">Datos de tu tienda</string>
    <string name="rt_varstrcrearpuntoventa2">Nombre de tu marca</string>
    <string name="rt_varstrcrearpuntoventa3">¿Cuánto vende al mes?</string>
    <string name="rt_varstrcrearpuntoventa4">Correo</string>
    <string name="rt_varstrcrearpuntoventa5">Nro. Teléfono</string>
    <string name="rt_varstrcrearpuntoventa6">Inventario estimado</string>
    <string name="rt_varstrcrearpuntoventa7">ubicación</string>
    <string name="rt_varstrcrearpuntoventa9">Seleccion su ciudad:</string>
    <string name="mit_varstrmenutienda1">Proveedor</string>
    <string name="mit_varstrmenutienda2">Ingreso Stock</string>
    <string name="mit_varstrmenutienda3">Editar datos</string>
    <string name="mit_varstrmenutienda4">Cambiar Tienda</string>
    <string name="mit_varstrmenutienda5">Agregar Tienda</string>
    <string name="productos">Productos</string>
</resources>