<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mi_tienda"
            android:icon="@drawable/is_iconmitienda"
            android:title="@string/menu_mitienda" />
        <item
            android:id="@+id/nav_mis_productos"
            android:icon="@drawable/is_iconmisproductos"
            android:title="@string/menu_misproductos" />
        <item
            android:id="@+id/nav_mis_ordenes"
            android:icon="@drawable/is_iconmisordenes"
            android:title="@string/menu_misordenes" />
        <item
            android:id="@+id/nav_mi_publicidad"
            android:icon="@drawable/is_iconmipublicidad"
            android:title="@string/menu_mipublicidad" />
        <item
            android:id="@+id/nav_mi_aprendizaje"
            android:icon="@drawable/is_iconcategorias"
            android:title="@string/menu_miaprendizaje" />
        <item
            android:id="@+id/nav_soporte"
            android:icon="@drawable/is_iconsoporte"
            android:title="@string/menu_soporte" />
    </group>
</menu>