<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:clickable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:gravity="center"
        android:background="@drawable/containedbutton_white">
        <ImageView
            android:id="@+id/btn_close"
            android:layout_gravity="end"
            android:src="@drawable/pub_iconclose"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_varstrdialogcamara1"
            style="@style/Headline_5"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginVertical="15dp"
            android:text="@string/pub_varstrdialogcamara2"
            android:textAlignment="center"
            style="@style/Subtitle_1"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/pub_varstrdialogcamara3"
            android:textAlignment="center"
            style="@style/Body_2"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Camara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/pub_varstrdialogcamara4"
                style="@style/Contained_button_blue"/>

            <Button
                android:id="@+id/btn_Galeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/pub_varstrdialogcamara5"
                style="@style/Contained_button_green"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>