<?xml version="1.0" encoding="utf-8"?>
<!--Creado por Briceño Malpartida Douglas Igancio - Universidad Continental - 2022-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    tools:context=".tendero.Inicio_sesion.ui.Soporte.sp_frgconfiguracionnotificaciones" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <Switch
                    android:id="@+id/stch_confmensajes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_1"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="16dp"/>

                <Switch
                    android:id="@+id/stch_confavtividadcuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_2"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="16dp"/>

                <Switch
                    android:id="@+id/stch_confnuevaorden"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_3"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="16dp"/>

                <Switch
                    android:id="@+id/stch_confsegumientoorden"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_4"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="16dp"/>
                <Switch
                    android:id="@+id/stch_confordencompletada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_5"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/btn_guardarconfiguracionnotificaciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="200dp"
                    android:text="Guardar"
                    style="@style/Contained_button_blue"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>